Add 2 night stay hotel json response to Mock web server
Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D560

--- a/project/unitTests/assets/MockResponses/m/api/hotel/search/happy.json
+++ b/project/unitTests/assets/MockResponses/m/api/hotel/search/happy.json
@@ -67,7 +67,6 @@
             "rateCurrencySymbol": "$",
             "roomsLeftAtThisRate": "40",
             "shortDescription": "Just off Market Street, downtown San Francisco's major thoroughfare, this contemporary 32-story hotel is 1 block from San Francisco Centre shops and 3 blocks from the Moscone Convention Center.",
-            "sortIndex": "0",
             "stateProvinceCode": "CA",
             "supplierType": "MERCHANT",
             "thumbnailUrl": "/hotels/1000000/20000/12600/12539/12539_81_n.jpg",
@@ -140,7 +139,6 @@
             "rateCurrencySymbol": "$",
             "roomsLeftAtThisRate": "40",
             "shortDescription": "Freshly opened in 2006, the Orchard Garden Hotel is right next to San Francisco's Chinatown Gate, about a block from the Financial District, and 2 blocks from Union Square's world-class shopping.",
-            "sortIndex": "1",
             "stateProvinceCode": "CA",
             "supplierType": "MERCHANT",
             "thumbnailUrl": "/hotels/1000000/570000/564900/564858/564858_43_y.jpg",
@@ -213,7 +211,6 @@
             "rateCurrencySymbol": "$",
             "roomsLeftAtThisRate": "40",
             "shortDescription": "Hotel in San Francisco (Theater District) near Union Square",
-            "sortIndex": "2",
             "stateProvinceCode": "CA",
             "supplierType": "MERCHANT",
             "thumbnailUrl": "/hotels/1000000/800000/791800/791769/791769_36_y.jpg",
@@ -286,7 +283,6 @@
             "rateCurrencySymbol": "$",
             "roomsLeftAtThisRate": "40",
             "shortDescription": "Best Western Plus The Tuscan is 2 blocks from Fisherman's Wharf, Pier 39, and the Alcatraz Island ferry.",
-            "sortIndex": "3",
             "stateProvinceCode": "CA",
             "supplierType": "MERCHANT",
             "thumbnailUrl": "/hotels/1000000/10000/4400/4302/4302_87_y.jpg",
@@ -359,7 +355,6 @@
             "rateCurrencySymbol": "$",
             "roomsLeftAtThisRate": "40",
             "shortDescription": "Freshly opened in 2006, the Orchard Garden Hotel is right next to San Francisco's Chinatown Gate, about a block from the Financial District, and 2 blocks from Union Square's world-class shopping.",
-            "sortIndex": "4",
             "stateProvinceCode": "CA",
             "supplierType": "MERCHANT",
             "thumbnailUrl": "/hotels/1000000/30000/22400/22303/22303_157_y.jpg",
@@ -433,7 +428,6 @@
             "rateCurrencySymbol": "$",
             "roomsLeftAtThisRate": "40",
             "shortDescription": "The Serrano Hotel is steps away from Union Square, perfectly positioned in the Theater District of San Francisco, 2 blocks from the Powell Street cable car.",
-            "sortIndex": "5",
             "stateProvinceCode": "CA",
             "supplierType": "MERCHANT",
             "thumbnailUrl": "/hotels/1000000/30000/23800/23774/23774_105_y.jpg",
@@ -506,7 +500,6 @@
             "rateCurrencySymbol": "$",
             "roomsLeftAtThisRate": "40",
             "shortDescription": "Just off Market Street, downtown San Francisco's major thoroughfare, this contemporary 32-story hotel is 1 block from San Francisco Centre shops and 3 blocks from the Moscone Convention Center.",
-            "sortIndex": "0",
             "stateProvinceCode": "CA",
             "supplierType": "MERCHANT",
             "thumbnailUrl": "/hotels/1000000/20000/12600/12539/12539_81_n.jpg",
@@ -579,12 +572,90 @@
             "rateCurrencySymbol": "$",
             "roomsLeftAtThisRate": "40",
             "shortDescription": "Just off Market Street, downtown San Francisco's major thoroughfare, this contemporary 32-story hotel is 1 block from San Francisco Centre shops and 3 blocks from the Moscone Convention Center.",
-            "sortIndex": "0",
             "stateProvinceCode": "CA",
             "supplierType": "MERCHANT",
             "thumbnailUrl": "/hotels/1000000/20000/12600/12539/12539_81_n.jpg",
             "totalRecommendations": "0",
             "totalReviews": "100"
+        },
+        {
+             "hotelId": "Hotel_2_night_stay",
+             "name": "Hotel_2_night_stay",
+             "localizedName": "",
+             "address": "340 Stockton St",
+             "city": "San Francisco",
+             "stateProvinceCode": "CA",
+             "countryCode": "USA",
+             "postalCode": "94108",
+             "airportCode": "SFO",
+             "supplierType": "MERCHANT",
+             "hotelStarRating": "4.5",
+             "hotelStarRatingCssClassName": "4-5",
+             "hotelGuestRating": "4.6",
+             "totalRecommendations": "541",
+             "percentRecommended": "93",
+             "totalReviews": "583",
+             "shortDescription": "Offering a refined residential ambience, this boutique hotel is at the edge of San Francisco's Union Square, 1 block from the cable car, 4 blocks from the Theater District, and 6 blocks from Nob Hill.",
+             "locationDescription": "Union Square",
+             "locationId": "800129",
+             "lowRate": "815.00",
+             "lowRateInfo": {
+                "maxNightlyRate": "652.00",
+                "averageRate": "652.00",
+                "taxStatusType": "NONE",
+                "averageBaseRate": "815.00",
+                "nightlyRateTotal": "1304.00",
+                "discountPercent": -20,
+                "total": "1304.00",
+                "currencyCode": "USD",
+                "currencySymbol": "$",
+                "nightlyRatesPerRoom": [
+                   {
+                      "promo": "true",
+                      "baseRate": "815.00",
+                      "rate": "652.00"
+                   },
+                   {
+                      "promo": "true",
+                      "baseRate": "815.00",
+                      "rate": "652.00"
+                   }
+                ],
+                "priceToShowUsers": "652",
+                "strikethroughPriceToShowUsers": "815",
+                "strikethroughPriceWithTaxesAndFeesToShowUsers": "1630",
+                "totalMandatoryFees": "0.00",
+                "totalPriceWithMandatoryFees": "1304.00",
+                "formattedTotalPriceWithMandatoryFees": "$ 1,304.00",
+                "userPriceType": "PerNightRateNoTaxes",
+                "priceAdjustments": [],
+                "checkoutPriceType": "total",
+                "airAttached": false,
+                "roomTypeCode": "104108",
+                "ratePlanCode": "203305439"
+             },
+             "rateCurrencyCode": "USD",
+             "rateCurrencySymbol": "$",
+             "roomsLeftAtThisRate": "-1",
+             "latitude": "37.789103",
+             "longitude": "-122.4069",
+             "proximityDistanceInMiles": "0.40110081425537253",
+             "proximityDistanceInKiloMeters": "0.6453712101368944",
+             "thumbnailUrl": "/hotels/1000000/30000/23400/23383/23383_132_n.jpg",
+             "discountMessage": "Early Booking Bonus—Save 20% on Your Hotel Stay",
+             "isDiscountRestrictedToCurrentSourceType": false,
+             "isSameDayDRR": false,
+             "isHotelAvailable": true,
+             "notAvailableMessage": "",
+             "isSponsoredListing": false,
+             "hasFreeCancellation": false,
+             "distanceUnit": "Miles",
+             "didGetBackHighestPriceFromSurvey": false,
+             "isDudley": false,
+             "isVipAccess": false,
+             "isPaymentChoiceAvailable": false,
+             "isShowEtpChoice": false,
+             "shortDiscountMessage": "Save 20%"
         }
     ],
     "numberOfRoomsRequested": 1
