--- a/project/unitTests/assets/MockResponses/m/api/hotel/trip/create/happy_path_0.json
+++ b/project/unitTests/assets/MockResponses/m/api/hotel/trip/create/happy_path_0.json
@@ -27,8 +27,8 @@
             }
         ],
         "adultCount": "1",
-        "checkInDate": "2013-03-22",
-        "checkOutDate": "2013-03-23",
+        "checkInDate": "${checkInDate}",
+        "checkOutDate": "${checkOutDate}",
         "hotelAddress": "54 4th Street",
         "hotelCity": "San Francisco",
         "hotelCountry": "USA",
