--- a/project/build.gradle
+++ b/project/build.gradle
@@ -52,7 +52,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 19
 
-        testPackageName "com.expedia.bookings.test"
+        testApplicationId "com.expedia.bookings.test"
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
 
         buildConfigField "boolean", "IS_EXPEDIA", "false"
@@ -68,13 +68,13 @@ android {
         Expedia {
             buildConfigField "boolean", "IS_EXPEDIA", "true"
             buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
-            packageName "com.expedia.bookings"
+            applicationId "com.expedia.bookings"
         }
 
         VSC {
             buildConfigField "boolean", "IS_VSC", "true"
             buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
-            packageName "com.expedia.bookings.vsc"
+            applicationId "com.expedia.bookings.vsc"
             versionCode 1
             versionName "1.0"
         }
@@ -82,7 +82,7 @@ android {
         Travelocity {
             buildConfigField "boolean", "IS_TRAVELOCITY", "true"
             buildConfigField "String", "MEDIA_URL", "\"http://media.travelocitycustomercare.com\""
-            packageName "com.travelocity.android"
+            applicationId "com.travelocity.android"
             versionCode 1
             versionName "1.0"
         }
@@ -90,7 +90,7 @@ android {
         AirAsiaGo {
             buildConfigField "boolean", "IS_AAG", "true"
             buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
-            packageName "com.airasiago.android"
+            applicationId "com.airasiago.android"
             versionCode 1
             versionName "1.0"
         }
@@ -99,14 +99,14 @@ android {
             buildConfigField "boolean", "IS_EXPEDIA", "true"
             buildConfigField "boolean", "IS_AUTOMATION", "true"
             buildConfigField "String", "MEDIA_URL", "\"http://0.0.0.0\""
-            packageName "com.expedia.bookings.auto"
+            applicationId "com.expedia.bookings.auto"
             testInstrumentationRunner "com.expedia.bookings.test.utils.SpoonInstrumentationTestRunner"
         }
 
         TravelocityAutomation {
             buildConfigField "boolean", "IS_TRAVELOCITY", "true"
             buildConfigField "boolean", "IS_AUTOMATION", "true"
-            packageName "com.travelocity.android.auto"
+            applicationId "com.travelocity.android.auto"
             versionCode 1
             versionName "1.0"
         }
@@ -119,7 +119,7 @@ android {
 
     buildTypes {
         debug {
-            packageNameSuffix ".debug"
+            applicationIdSuffix ".debug"
 
             runProguard shouldRunProguard
             proguardFile 'proguard.cfg'
@@ -127,13 +127,13 @@ android {
 
         latest.initWith(buildTypes.debug)
         latest {
-            packageNameSuffix ".latest"
+            applicationIdSuffix ".latest"
             hockey.enabled true
         }
 
         next.initWith(buildTypes.debug)
         next {
-            packageNameSuffix ".next"
+            applicationIdSuffix ".next"
             hockey.enabled true
         }
 
