AdX setup for AAG
Summary: For now removing extra details from Manifest xml

Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D576

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -189,6 +189,7 @@ android {
         }
 
         AirAsiaGo {
+            manifest.srcFile 'AndroidManifest-aag.xml'
             res.srcDirs 'res_airasiago'
         }
 
