--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@
 
 buildscript {
     repositories {
-        mavenCentral()
+      maven { url 'http://download.crashlytics.com/maven' }
+      mavenCentral()
     }
     dependencies {
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
         classpath 'com.android.tools.build:gradle:0.12.2'
     }
 }
