Gradle project structure - update automation res folders
Delete unused TravelocityAutomation strings file and move the ExpediaAutomation
res folder to it's appropriate place.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -161,6 +161,7 @@ android {
     sourceSets {
         androidTestTravelocityAutomation {
             java.srcDirs = ['src/androidTestExpediaAutomation/java']
+            res.srcDirs = ['src/androidTestExpediaAutomation/res']
         }
 
         Expedia {
