Add changelog and invitees to Crashlytics Beta uploads

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -132,6 +132,8 @@ android {
 
             runProguard shouldRunProguard
             proguardFile 'proguard.cfg'
+            ext.betaDistributionReleaseNotesFilePath="../changelog.txt"
+            ext.betaDistributionGroupAliasesFilePath="../buildbot/crashlytics_beta_groups.txt"
         }
 
         latest.initWith(buildTypes.debug)
