--- a/project/build.gradle
+++ b/project/build.gradle
@@ -74,7 +74,7 @@ android {
     }
 
     productFlavors {
-        Expedia {
+        expedia {
             buildConfigField "boolean", "IS_EXPEDIA", "true"
             buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
             applicationId "com.expedia.bookings"
@@ -162,15 +162,6 @@ android {
         androidTestTravelocityAutomation {
             java.srcDirs = ['src/androidTestExpediaAutomation/java']
             res.srcDirs = ['src/androidTestExpediaAutomation/res']
-        }
-
-        Expedia {
-            manifest.srcFile 'AndroidManifest-expedia.xml'
-        }
-
-        VSC {
-            manifest.srcFile 'AndroidManifest-vsc.xml'
-            res.srcDirs 'res_vsc'
         }
 
         Travelocity {
