--- a/project/build.gradle
+++ b/project/build.gradle
@@ -80,7 +80,7 @@ android {
             applicationId "com.expedia.bookings"
         }
 
-        VSC {
+        voyages {
             buildConfigField "boolean", "IS_VSC", "true"
             buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
             applicationId "com.expedia.bookings.vsc"
