Change paths to Crashlytics config files.
Everything is relative, man.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -139,8 +139,8 @@ android {
             applicationIdSuffix ".latest"
             hockey.enabled true
 
-            ext.betaDistributionReleaseNotesFilePath="../changelog.txt"
-            ext.betaDistributionGroupAliasesFilePath="../buildbot/crashlytics_beta_groups.txt"
+            ext.betaDistributionReleaseNotesFilePath="changelog.txt"
+            ext.betaDistributionGroupAliasesFilePath="buildbot/crashlytics_beta_groups.txt"
         }
 
         feature.initWith(buildTypes.debug)
