--- a/project/src/airAsiaGo/AndroidManifest.xml
+++ b/project/src/airAsiaGo/AndroidManifest.xml
@@ -19,6 +19,14 @@
                 <action android:name="com.android.vending.INSTALL_REFERRER"/>
             </intent-filter>
         </receiver>
+
+        <receiver
+            android:name="com.expedia.bookings.activity.AirAsiaGoLocaleChangeReceiver"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.expedia.bookings.action.aag_locale_changed" />
+            </intent-filter>
+        </receiver>
         
         <!-- Deep link routing activity -->
         <activity
