--- a/project/src/main/AndroidManifest.xml
+++ b/project/src/main/AndroidManifest.xml
@@ -380,7 +380,9 @@
 
         <!-- Google Wallet optimization -->
 
-        <receiver android:name="com.no.real.class.needed.receiver" >
+        <receiver
+            android:name="com.google.android.gms.wallet.EnableWalletOptimizationReceiver"
+            android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.android.gms.wallet.ENABLE_WALLET_OPTIMIZATION" />
             </intent-filter>
