--- a/project/build.gradle
+++ b/project/build.gradle
@@ -28,12 +28,12 @@ dependencies {
     compile project(':lib:ShareEverywhere:shareeverywhere')
     compile project(':lib:AndroidTime')
 
-    compile "com.android.support:support-v4:${rootProject.ext.supportLibVersion}"
+    // Google Play Services includes the support lib transitively
     compile "com.google.android.gms:play-services:${rootProject.ext.googlePlayServicesVersion}"
 
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup:otto:1.3.4'
-    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.google.code.gson:gson:2.3'
     compile 'com.crashlytics.android:crashlytics:1.+'
 
     androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r3'
