Update shared itin short domain for AAG
Since the domain that was acquired is "aago.co"

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D663

--- a/project/src/airAsiaGo/AndroidManifest.xml
+++ b/project/src/airAsiaGo/AndroidManifest.xml
@@ -39,7 +39,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data android:scheme="http" />
-                <data android:host="a.asgo.co" />
+                <data android:host="a.aago.co" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -47,7 +47,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="arago" />
+                <data android:scheme="aago" />
                 <data android:host="home" />
                 <data android:host="trips" />
                 <data android:host="showTrips" />
