Cleanup LaunchFragment implementations for white labels
This commit more properly supports custom Java source code for
a given product flavor. expedia, travelocity, and airAsiaGo product
flavors all provide different LaunchFragment implementations for the
phone LaunchActivity. We had been using an if-else block in LaunchActivity
to instantiate the correct LaunchFragment for the given product flavor.

A more conventional way to support this is to have each product flavor
provide a class definition of the same class name. Therefore, each
product flavor now provides it's own LaunchFragment.java and LaunchActivity
will pick up the correct definition because the build system will merge
Jave sources at compile time.

The build system does not support override Java sources as it does overriding
resources. Therefore, there is no LaunchFragment.java in src/main, rather,
each of the product flavors has it's own.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -169,6 +169,7 @@ android {
         }
 
         expediaAutomation {
+            java.srcDirs = ['src/expedia/java']
             manifest.srcFile 'src/expedia/AndroidManifest.xml'
         }
 
