Remove HockeyApp integration from our app

--- a/project/proguard.cfg
+++ b/project/proguard.cfg
@@ -63,7 +63,7 @@
 	public static ** valueOf(java.lang.String);
 }
 
-# Keep content providers intact. It looks like HockeyApp relies on this
+# Keep content providers intact
 -keep public class * extends android.content.ContentProvider {
 	*;
 }
