Move Crashlytics key directly into manifest
We were using a placeholder but we don't actually need to ever change
it.

--- a/project/src/main/AndroidManifest.xml
+++ b/project/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
         <!-- Crashlytics -->
         <meta-data
             android:name="com.crashlytics.ApiKey"
-            android:value="${crashlyticsKey}" />
+            android:value="045825b17e2b00aa0dde8ba0dcea1ad63801d612" />
 
         <!-- Make sure activity uses full path, i.e. com.expedia.bookings.activity.* -->
 
