--- a/project/src/airAsiaGo/AndroidManifest.xml
+++ b/project/src/airAsiaGo/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.expedia.bookings">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <application>
 
@@ -27,7 +26,7 @@
                 <action android:name="com.expedia.bookings.action.aag_locale_changed" />
             </intent-filter>
         </receiver>
-        
+
         <!-- Deep link routing activity -->
         <activity
             android:name="com.expedia.bookings.activity.DeepLinkRouterActivity"
