3477: Only package languages we care about
Now we don't get mixed languages because our libraries were still
including them. For example FlightTrack supports some languages where we
just fall back to English. However any AndroidUtils code that fetched a
string would fetch the translated one. Now the behaviour matches better.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -75,6 +75,9 @@ android {
         buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
         buildConfigField "String", "GIT_REVISION",  "\"${gitRev}\""
         buildConfigField "String", "BUILD_NUMBER",  "\"${buildNumber}\""
+
+        // Explicitly define the languages we use so GPS and other libraries doesn't include unnecessary ones
+        resConfigs "da", "de", "en_CA", "en_GB", "es", "es_MX", "fr", "fr_CA", "in", "it", "ja", "ko", "nb", "nl", "pt", "sv", "th", "vi_VN", "zh", "zh_HK", "zh_TW"
     }
 
     productFlavors {
