Point TravelocityAutomationDebug target to correct res/code

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -175,8 +175,9 @@ android {
         }
 
         travelocityAutomation {
+            java.srcDirs = ['src/travelocity/java']
+            res.srcDirs = ['src/travelocity/res']
             manifest.srcFile 'src/travelocity/AndroidManifest.xml'
-            res.srcDirs 'src/travelocity/res'
         }
 
         signingConfigs {
