Add valid forms of payment to mock response
For happy path test

--- a/project/src/androidTest/assets/MockResponses/m/api/hotel/trip/create/happy_path_0.json
+++ b/project/src/androidTest/assets/MockResponses/m/api/hotel/trip/create/happy_path_0.json
@@ -337,5 +337,25 @@
     },
     "tealeafTransactionId": "tealeafHotel:${productKey}",
     "tripId": "${productKey}",
-    "userId": 4019550
+    "userId": 4019550,
+    "validFormsOfPayment": [
+        {
+            "name": "AmericanExpress"
+        },
+        {
+            "name": "Diner's Club International"
+        },
+        {
+            "name": "Discover"
+        },
+        {
+            "name": "JCB"
+        },
+        {
+            "name": "MasterCard"
+        },
+        {
+            "name": "Visa"
+        }
+    ]
 }
