--- a/project/build.gradle
+++ b/project/build.gradle
@@ -97,7 +97,7 @@ android {
 
         travelocity {
             buildConfigField "boolean", "IS_TRAVELOCITY", "true"
-            buildConfigField "String", "MEDIA_URL", "\"http://media.travelocitycustomercare.com\""
+            buildConfigField "String", "MEDIA_URL", "\"http://images.trvl-media.com\""
             applicationId "com.travelocity.android"
             versionCode 1003
             versionName "6.2-${versionCode}"
