Latest needs to compile in the debug Java sources
Feature builds as well. This breaks convention but we can fix it later.
I just want to get the build back to green.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -163,6 +163,14 @@ android {
     }
 
     sourceSets {
+        latest {
+            java.srcDirs = ['src/debug/java']
+        }
+
+        feature {
+            java.srcDirs = ['src/debug/java']
+        }
+
         androidTestTravelocityAutomation {
             java.srcDirs = ['src/androidTestExpediaAutomation/java']
             res.srcDirs = ['src/androidTestExpediaAutomation/res']
