Vietnamese strings should not be limited by region
Talked to Scott Weber and we will change the submodules to reflect this
too.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -77,7 +77,7 @@ android {
         buildConfigField "String", "BUILD_NUMBER",  "\"${buildNumber}\""
 
         // Explicitly define the languages we use so GPS and other libraries doesn't include unnecessary ones
-        resConfigs "da", "de", "en_CA", "en_GB", "es", "es_MX", "fr", "fr_CA", "in", "it", "ja", "ko", "nb", "nl", "pt", "sv", "th", "vi_VN", "zh", "zh_HK", "zh_TW"
+        resConfigs "da", "de", "en_CA", "en_GB", "es", "es_MX", "fr", "fr_CA", "in", "it", "ja", "ko", "nb", "nl", "pt", "sv", "th", "vi", "zh", "zh_HK", "zh_TW"
     }
 
     productFlavors {
