--- a/project/build.gradle
+++ b/project/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'checkstyle'
 repositories {
     mavenCentral()
     maven { url 'http://download.crashlytics.com/maven' }
+    maven { url 'http://www.leanplum.com/leanplum-sdks/' }
 }
 
 dependencies {
@@ -36,6 +37,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.4'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.crashlytics.android:crashlytics:1.+'
+    compile 'com.leanplum:Leanplum:1.2.6'
 
     androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r3'
     androidTestCompile 'com.squareup.spoon:spoon-client:1.1.1'
