--- a/project/src/expedia/AndroidManifest.xml
+++ b/project/src/expedia/AndroidManifest.xml
@@ -104,6 +104,20 @@
             </intent-filter>
         </receiver>
 
+        <!--Push Notifications for lean plum sdk -->
+        <receiver
+            android:name="com.leanplum.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.expedia.bookings.gcm" />
+            </intent-filter>
+        </receiver>
+        <service android:name="com.leanplum.LeanplumPushService" />
+
+
     </application>
 
 </manifest>
