Add more valid forms of payment to mock response for CC edit info automation test.

--- a/project/src/androidTest/assets/MockResponses/m/api/hotel/trip/create/happy_path_0.json
+++ b/project/src/androidTest/assets/MockResponses/m/api/hotel/trip/create/happy_path_0.json
@@ -356,6 +356,15 @@
         },
         {
             "name": "Visa"
+        },
+        {
+            "name": "Maestro"
+        },
+        {
+            "name": "ChinaUnionPay"
+        },
+        {
+            "name": "CarteBlanche"
         }
     ]
 }
