Starting some pure Java tests
- Start moving some pure Java code to its own Java library
- Write some pure Java tests for said pure Java code
- Delete corresponding Android Test cases

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ include ':lib:FlightLib'
 include ':lib:Utils'
 include ':lib:ShareEverywhere:shareeverywhere'
 include ':lib:AndroidTime'
+include ':lib:ExpediaBookings'
