--- a/project/build.gradle
+++ b/project/build.gradle
@@ -60,10 +60,11 @@ android {
     }
 
     defaultConfig {
-        versionCode 41
-        versionName "4.2"
+        versionCode 1
+        versionName "undefined"
+
         minSdkVersion 15
-        targetSdkVersion 19
+        targetSdkVersion 21
 
         testApplicationId "com.expedia.bookings.test"
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
@@ -87,6 +88,8 @@ android {
             buildConfigField "boolean", "IS_EXPEDIA", "true"
             buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
             applicationId "com.expedia.bookings"
+            versionCode 41
+            versionName "4.2"
         }
 
         voyages {
