--- a/project/build.gradle
+++ b/project/build.gradle
@@ -56,6 +56,11 @@ android {
 
     testBuildType "latest"
 
+
+    dexOptions {
+        javaMaxHeapSize "2g"
+    }
+
     lintOptions {
         checkReleaseBuilds false
         showAll true
@@ -126,14 +131,13 @@ android {
         debug {
             applicationIdSuffix ".debug"
 
-            runProguard false
-            proguardFile 'proguard.cfg'
+            minifyEnabled false
+            proguardFile file('proguard.cfg')
         }
 
         latest.initWith(buildTypes.debug)
         latest {
-            runProguard shouldRunProguard
-            proguardFile 'proguard.cfg'
+            minifyEnabled shouldRunProguard
 
             applicationIdSuffix ".latest"
 
@@ -143,8 +147,7 @@ android {
 
         feature.initWith(buildTypes.debug)
         feature {
-            runProguard shouldRunProguard
-            proguardFile 'proguard.cfg'
+            minifyEnabled shouldRunProguard
 
             applicationIdSuffix (".feature." + featureName)
 
@@ -153,8 +156,8 @@ android {
         }
 
         release {
-            runProguard true
-            proguardFile 'proguard.cfg'
+            minifyEnabled true
+            proguardFile file('proguard.cfg')
         }
     }
 
